--- a/train_basic_model.ipynb
+++ b/train_basic_model.ipynb
@@ -22,7 +22,7 @@
     "from OMTFGraphNetwork import OMTFGraphNetwork\n",
     "\n",
     "# Instantiate the network\n",
-    "g=OMTFGraphNetwork()\n",
+    "g=OMTFGraphNetwork() # Optionally pass a class name. The class must inherit from nn.Module. DO NOT PASS THE CONSTRUCTOR (the constructor is called via g.instantiate_model() below)\n",
     "\n",
     "#g.load_data('data/omtfAnalysis2.root:simOmtfPhase2Digis/OMTFHitsTree', fraction=0.05, viz=True)\n",
     "#g.load_data('data/Displaced_cTau5m_XTo2LLTo4Mu_condPhase2_realistic_l1omtf_12.root:simOmtfPhase2Digis/OMTFHitsTree', fraction=1., viz=True)\n",
@@ -35,7 +35,7 @@
     "if not dotrain:\n",
     "    g.load_model('models/model.pth')\n",
     "else:\n",
-    "    g.instantiate_model() # pass parameters of the model here\n",
+    "    g.instantiate_model() # pass parameters of the model here, if needed\n",
     "    g.do_training(10)\n",
     "\n",
     "# Look at output plots\n",
