Update Training_V0.1 with few models, to test the normalization

--- a/test/ValidateModel.ipynb
+++ b/test/ValidateModel.ipynb
@@ -7,6 +7,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import mlphep as hep\n",
+    "hep.style.use(\"CMS\")\n",
+    "\n",
+    "\n",
     "class PlotRegression:\n",
     "    def __init__(self, model, test_loader, batch_size):\n",
     "        self.model = model\n",
@@ -33,13 +37,16 @@
     "        plt.hist(self.pt_truth_arr, bins=100, color='skyblue', alpha=0.5, label=\"truth\")\n",
     "        plt.hist(self.pt_pred_arr, bins=100, color='g', alpha=0.5, label=\"prediction\")\n",
     "        plt.legend()\n",
+    "        hep.cms.label(\"Preliminary\")\n",
     "        plt.savefig(os.path.join(output_dir, \"pt_regression.png\"))\n",
+    "\n",
     "        plt.clf()\n",
     "\n",
     "        print(f\"Plotting scatter in {output_dir}\")\n",
     "        plt.plot(self.pt_truth_arr, self.pt_pred_arr, 'o')\n",
     "        plt.xlabel(\"Truth\")\n",
     "        plt.ylabel(\"Prediction\")\n",
+    "        hep.cms.label(\"Preliminary\")\n",
     "        plt.savefig(os.path.join(output_dir, \"pt_regression_scatter.png\"))\n",
     "        plt.clf()\n",
     "\n",
@@ -48,6 +55,7 @@
     "        diff = [x - y for x, y in zip(self.pt_truth_arr, self.pt_pred_arr)]\n",
     "        plt.hist(diff, bins=100, color='r', alpha=0.5, label=\"difference\")\n",
     "        plt.legend()\n",
+    "        hep.cms.label(\"Preliminary\")\n",
     "        plt.savefig(os.path.join(output_dir, \"pt_regression_diff.png\"))\n",
     "        plt.clf()"
    ]
