--- a/test/TrainingModel.ipynb
+++ b/test/TrainingModel.ipynb
@@ -215,7 +215,12 @@
    "id": "a5d06f89",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = GATRegressor(num_node_features, num_edge_features, hidden_dim, output_dim).to(self.device)\n",
+    "optimizer = torch.optim.Adam(self.model.parameters(), lr=self.LearningRate, weight_decay=0.75)\n",
+    "print(\"Model initialized\")\n",
+    "print(model)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -462,7 +467,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pyenv",
+   "display_name": "pyenv_win",
    "language": "python",
    "name": "python3"
   },
@@ -476,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
