--- a/test/TrainModelWithNorm.ipynb
+++ b/test/TrainModelWithNorm.ipynb
@@ -512,7 +512,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pyenv_win",
    "language": "python",
    "name": "python3"
   },
@@ -526,7 +526,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
