--- a/tools/training/TrainingModelLocal.ipynb
+++ b/tools/training/TrainingModelLocal.ipynb
@@ -496,7 +496,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pyenv_win",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -510,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
