--- a/test/TrainModelWithNorm.ipynb
+++ b/test/TrainModelWithNorm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,8 @@
     "\n",
     "for i in range(0, len(Graphs_for_training_filtered)):\n",
     "    Graphs_for_training_filtered[i].y = Graphs_for_training_filtered[i].y.mean(dim=0)\n",
-    "    Graphs_for_training_filtered[i].edge_attr = torch.stack([Graphs_for_training_filtered[i].deltaPhi.float(), Graphs_for_training_filtered[i].deltaEta.float()], dim=1)        \n",
+    "    Graphs_for_training_filtered[i].edge_attr = torch.stack([Graphs_for_training_filtered[i].deltaPhi.float(), Graphs_for_training_filtered[i].deltaEta.float()], dim=1)\n",
+    "    Graphs_for_training_filtered[i].edge_weight = torch.ones(Graphs_for_training_filtered[i].edge_index.size(1))        \n",
     "\n",
     "# remove extra dimenson in y\n",
     "print(f\"Total Graphs: {len(Graphs_for_training)}\")\n",
@@ -177,6 +178,7 @@
     "print(Graphs_for_training_filtered[0].x)\n",
     "print(Graphs_for_training_filtered[0].edge_index)\n",
     "print(Graphs_for_training_filtered[0].edge_attr)\n",
+    "print(Graphs_for_training_filtered[0].edge_weight)\n",
     "print(Graphs_for_training_filtered[0].y)\n",
     "print(\"====================================\")"
    ]
@@ -882,7 +884,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pyenv",
+   "display_name": "pyenv_win",
    "language": "python",
    "name": "python3"
   },
@@ -896,7 +898,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
