--- a/test/TrainModelWithNorm.ipynb
+++ b/test/TrainModelWithNorm.ipynb
@@ -1042,7 +1042,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pyenv",
    "language": "python",
    "name": "python3"
   },
@@ -1056,7 +1056,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
