--- a/test/TrainModelWithNorm.ipynb
+++ b/test/TrainModelWithNorm.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +30,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -454,7 +452,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -944,7 +941,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1065,7 +1061,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pyenv",
+   "display_name": "pyenv_win",
    "language": "python",
    "name": "python3"
   },
@@ -1079,7 +1075,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
